# misis2024s-23-01-bauer-v-v

./: .gitignore  CMakeLists.txt  codeforces.id  status.md
prj.codeforces/: 0004a.cpp  0136b.cpp  0263a.cpp  0271a.cpp  0339b.cpp  0617a.cpp  0731a.cpp  0915a.cpp  1352a.cpp  1404a.cpp  1512c.cpp  1559a.cpp  1669d.cpp  1670b.cpp  1690d.cpp  1692c.cpp  1717b.cpp  1734b.cpp  1744c.cpp  1873c.cpp  1873d.cpp  CMakeLists.txt  test.cpp
prj.lab/: CMakeLists.txt
prj.lab/Complex/: CMakeLists.txt  Complex.cpp  Complex.hpp
prj.lab/Rational/: CMakeLists.txt  Rational.cpp  Rational.hpp
prj.lab/bitset/: CMakeLists.txt  bitset.cpp  bitset.hpp
prj.lab/dynarr/: CMakeLists.txt  dynarr.cpp  dynarr.hpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuearrt/: CMakeLists.txt  queuearrt.hpp
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/queuelstprt/: CMakeLists.txt  queuelstprt.hpp
prj.lab/queuelstt/: CMakeLists.txt  queuelstt.hpp
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp
prj.lab/stackarrt/: CMakeLists.txt  stackarrt.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.lab/stacklstt/: CMakeLists.txt  stacklstt.hpp
prj.test/: CMakeLists.txt  doctest.h  general_test.cpp  input.txt  output.txt  test.txt  test_bitset.cpp  test_queue.cpp  test_queuearr.cpp  test_queuearrt.cpp  test_queuelstpr.cpp  test_queuelstprt.cpp  test_queuelstt.cpp  test_stack.cpp  test_stackarrt.cpp  test_stacklist.cpp  test_stacklstt.cpp
(+10 files in other folders)
