add_subdirectory(Complex)
add_subdirectory(Rational)
add_subdirectory(dynarr)
add_subdirectory(stackarr)
add_subdirectory(stackarrt)
add_subdirectory(stacklst)
add_subdirectory(stacklstt)
add_subdirectory(queuelst)
add_subdirectory(queuelstt)
add_subdirectory(queuearr)
add_subdirectory(bitset)
add_subdirectory(queuelstpr)